# HedwigCLI

./: .gitignore  AGENTS.md  BRAINSTORM.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  HEDWIG_END_TO_END.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
.sc/: config.json  trust.db
demo_recipe_api/: .gitignore  DEMO_FLOW.md  FEATURES.md  README.md  server.py  setup_demo.sh
demo_recipe_api/docs/: recipe_api_spec.md
demo_recipe_api/recipe_api/: api.py  auth.py  models.py  service.py  store.py
demo_recipe_api/tests/: test_api.py  test_store.py
demo_task_api/: DEMO_EVIDENCE.md  DEMO_FLOW.md  DEMO_RULES.md  README.md
demo_task_api/docs/: task_api_spec.md
demo_task_api/locked/: production_config.py
demo_task_api/task_api/: __init__.py  api.py  auth.py  errors.py  models.py  service.py  store.py
demo_task_api/tests/: test_api.py
docs/: BOOTH_PREP.md  HEDWIG_END_TO_END.md  HOW_IT_WORKS.md  OPERATOR_RUNBOOK.md  POST_CAIS_MIGRATION.md  READING_ORDER.md  README.md  SWECHAT_ANALYSIS_REPORT.md  WEBSITE_BRIEF.md  commands.html  hedwig_poster_2x3.html  index.html
integrations/omnigent/: README.md  policy.py
paper/: main.fdb_latexmk  main.fls  main.tex  refs.bib
paper/sections/: 01-intro.tex  02-system.tex  03-demo.tex  04-discussion.tex
plugin/: README.md  sync_vendor.py
plugin/.claude-plugin/: plugin.json
plugin/commands/: hedwig-cochange.md  hedwig-learn.md  hedwig-memory.md  hedwig-notice.md  hedwig-retrospective.md  hedwig-rules.md  hedwig-scan.md  hedwig-setup.md  hedwig-status.md  hedwig-weights.md
plugin/hooks/: hooks.json
sc/: __main__.py  agent_client.py  autonomy.py  checkin_quality.py  cli.py  cochange.py  config.py  constraints.py  demo_seed.py  export_report.py  features.py  hypothesis_bank.py  ml_policy.py  model_risk.py  patch.py  plan_gate.py  policy.py  preference_coordinator.py  preference_inference.py  preferences.py  prompt_builder.py  regret.py  repo.py  retrieval.py  schema.py  session.py  session_feedback.py  session_state.py  status.py  trust_db.py  verification.py
sc/commands/: admin.py  learning.py  observe.py  status.py
sc/run/: apply_stage.py  apply_ui.py  banner.py  checkin_styling.py  command.py  context_capture.py  diff_view.py  helpers.py  hypothesis_ui.py  intensity_toggle.py  model.py  oversight_toggle.py  pause_reason.py  preference_coordinator.py  read_stage.py  repl.py  reporting.py  retrospective.py  revise_state.py  soft_checkin.py  theme.py  thought_stream.py  traces.py  ui.py
sc/store/: lease_store.py  model_store.py  pref_store.py  rule_store.py  trace_store.py  types.py
scripts/: eval_policy_scenarios.csv  eval_policy_scenarios.py  seed_demo_db.py
scripts/claude_code_eval/: AGENTS_cautious.md  AGENTS_permissive.md  SCENARIOS.md  build_comparison_table.py  comparison_table.csv  results.csv
site/: index.html
swechat_agent/: BRIEF.md  BRIEF_V3.md  BRIEF_V4.md  CLAUDE.md  README.md
swechat_agent/data/: DATASET.md  bootstrap_cis.json  clusters.json  features.parquet  feedback_topics.json  pushback_model.json  (+5 more)
tests/: conftest.py  test_apply_security_floor.py  test_approval_helpers.py  test_autonomy.py  test_banner.py  test_checkin_quality.py  test_checkin_styling.py  test_constraints.py  test_demo_seed.py  test_diff_view.py  test_export_report.py  test_features.py  test_hypothesis_bank.py  test_ml_policy.py  test_model_risk.py  test_omnigent_adapter.py  test_pause_reason.py  test_phase.py  test_plan_gate.py  test_plugin_classifier.py  test_plugin_constraints.py  test_plugin_context.py  test_plugin_decide.py  test_plugin_deny_loop.py  test_plugin_handshake.py  test_plugin_hypothesis.py  test_plugin_notice.py  test_plugin_observe.py  test_plugin_outcome_loop.py  test_plugin_parity.py  test_plugin_reexec.py  test_plugin_status.py  test_policy.py  test_policy_decision_for_file.py  test_policy_rollback.py  test_policy_scorer.py  test_preference_coordinator.py  test_preference_hypotheses.py  test_preference_matching.py  test_preferences.py  (+17 more)
tooling/: check_plugin_version_bump.py  test_plugin_harness.py
(+5801 files in other folders)
