[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hedwig-cli"
version = "0.1.0"
description = "Hedwig: a governance-first coding agent CLI with adaptive autonomy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock]>=0.40.0",
    "boto3>=1.37.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "prompt_toolkit>=3.0.0",
    # Dense rule retrieval (sc/retrieval.py EmbeddingRanker, the default).
    # ~30MB onnx model, NO torch / NO GPU. If absent or its model can't be
    # fetched (offline), the Retrieval seam degrades to keyword matching with
    # no crash — so this is a soft requirement at runtime, declared here.
    "fastembed>=0.3.0",
]

[project.scripts]
hw = "sc.cli:app"
sc = "sc.cli:app"

[tool.setuptools.packages.find]
include = ["sc*"]

# ---------------------------------------------------------------------------
# Static analysis — run before every commit and in CI.
#
# ruff catches undefined names (F821), unused imports (F401), and dead
# assignments (F841) — the class of bug that broke soft check-in silently.
# These checks take <1s and require no type stubs.
#
# How to run manually:
#   .venv/bin/python -m ruff check sc/ --select F
#   PYTHONPATH=. .venv/bin/python -m pytest tests -q
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# ENFORCED gate (make lint / CI). Deliberately bug-focused, not style-focused:
# F4xx = import errors (unused, missing, circular)
# F8xx = undefined names, unused variables
# F9xx = syntax-level errors ruff can detect
# A wider bug+style probe (B = bugbear, SIM = simplify) is available via
# `make lint-deep` — run 2026-06-28, found 0 real bugs (the 3 B023 hits are
# false positives: callbacks over stable vars, not loop-var closures; the rest
# are SIM style). Kept opt-in so it doesn't gate the build on style churn.
select = ["F4", "F8", "F9"]

# E501 (line too long) is intentionally excluded — the codebase has long
# SQL strings and Rich markup that are clearer unbroken. E402 likewise: the
# plugin bins must manipulate sys.path before importing the vendored `sc`.
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests import fixtures and use assert-rewriting patterns that ruff can
# misread as unused. Allow F401/F811 in test files.
"tests/*" = ["F401", "F811"]
